fix listing vertical alignment
This change fixes the vertical alignment for listings. Without the
date column in the listing table would not match the title column on
mobile.

--- a/themes/base/static/css/custom.css
+++ b/themes/base/static/css/custom.css
@@ -71,6 +71,7 @@ sup {
 .listing td {
   padding: .75rem 0;
   border-bottom: none;
+  vertical-align: top;
 }
 .listing td:last-child {
   text-align: right;
